--- a/sass/seedsource.scss
+++ b/sass/seedsource.scss
@@ -1,2 +1,40 @@
-@import '~bulma/sass/utilities/_all';
-@import '~bulma/sass/base/_all';
+@import '~bulma/bulma';
+@import '~leaflet/dist/leaflet';
+@import '~leaflet-basemaps/L.Control.Basemaps';
+@import '~leaflet-geonames/L.Control.Geonames';
+
+$directions: left top right bottom;
+$spacings: 5 10 15;
+
+@each $direction in $directions {
+  @each $spacing in $spacings {
+    .margin-#{$direction}-#{$spacing} {
+      margin-#{$direction}: #{$spacing}px;
+    }
+  }
+}
+
+$header-height: 52px;
+$tab-header-height: 66px;
+$tab-content-height: calc(100vh - #{$header-height} - #{$tab-header-height});
+
+.sidebar {
+  box-shadow: 2px 0px 10px;
+  z-index: 401; // Raise box shadow above leaflet map
+}
+
+.sidebar-inner {
+  width: 440px;
+}
+
+.sidebar .tab-content {
+  max-height: $tab-content-height;
+  min-height: $tab-content-height;
+  overflow: auto;
+  padding: 0px 15px 0px 15px;
+}
+
+.map-container {
+  width: 100%;
+  height: 100%;
+}
