--- a/sass/seedsource.scss
+++ b/sass/seedsource.scss
@@ -1,3 +1,7 @@
+@import "~bulma/sass/utilities/initial-variables";
+
+$primary: $blue;
+
 @import '~bulma/bulma';
 @import '~leaflet/dist/leaflet';
 @import '~leaflet-basemaps/L.Control.Basemaps';
@@ -14,9 +18,40 @@ $spacings: 5 10 15;
   }
 }
 
+$icon-sizes: 12 16 18;
+$icons: eye eye-closed crop contrast save load file trash clock;
+
+@each $icon in $icons {
+  @each $size in $icon-sizes {
+    .icon-#{$icon}-#{$size} {
+      background: url('../images/icon-#{$icon}.svg') no-repeat center center;
+      width: #{$size}px;
+      height: #{$size}px;
+      display: inline-block;
+      background-size: #{$size}px #{$size}px;
+    }
+  }
+}
+
 $header-height: 52px;
+$family-strong: "Arial Black", "Arial Bold", Gadget, sans-serif;
 $tab-header-height: 66px;
 $tab-content-height: calc(100vh - #{$header-height} - #{$tab-header-height});
+
+.align-middle {
+  vertical-align: middle;
+}
+
+.badge {
+  border-radius: 10px;
+  padding: 3px 7px;
+  background-color: #777;
+  color: #fff;
+  font-weight: bold !important;
+  font-size: 0.75rem !important;
+  vertical-align: middle;
+  font-family: $family-strong;
+}
 
 .sidebar {
   box-shadow: 2px 0px 10px;
@@ -28,10 +63,93 @@ $tab-content-height: calc(100vh - #{$header-height} - #{$tab-header-height});
 }
 
 .sidebar .tab-content {
+  position: relative;
   max-height: $tab-content-height;
   min-height: $tab-content-height;
   overflow: auto;
   padding: 0px 15px 0px 15px;
+}
+
+.sidebar .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(255, 255, 255, .92);
+  z-index: 402;
+  padding: 0px 20px;
+}
+
+.sidebar .overlay progress {
+  width: 100%;
+}
+
+.configuration-step {
+  margin-bottom: 14px;
+}
+
+.configuration-step>h4 {
+  font-size: 1.25rem;
+  font-weight: bold;
+}
+
+.configuration-step .step-content {
+  margin: 10px 0px 0px 25px;
+}
+
+.point-chooser .input {
+  width: 85px;
+  margin-right: 10px;
+  text-align: right;
+}
+
+.modify-status {
+  display: inline-block;
+  width: 3px;
+  background-color: rgba(0, 0, 0, 0);
+  margin-right: 5px;
+  transition: background-color .5s;
+}
+
+.modify-status .modified {
+  background-color: #f0ad4e;
+  transition: background-color .5s;
+}
+
+.transfer-reset {
+  display: inline-block;
+  color: #66F;
+  cursor: pointer;
+  font-size: .9em;
+  float: right;
+  margin-right: 5px;
+}
+
+.visibility-toggle {
+  cursor: pointer;
+  opacity: .6;
+}
+
+tr.visible .visibility-toggle, .visibility-toggle:hover {
+  opacity: 1;
+}
+
+.variable-tooltip .tooltip-label {
+    color: #999;
+    margin-right: 8px;
+}
+
+.editable-label {
+    border-bottom: 1.5px dashed blue;
+    cursor: pointer;
+    color: blue;
+}
+
+.editable-label.edit {
+    border: 0;
+    cursor: default;
+    color: black;
 }
 
 .map-container {
