Improve layout and scrolling on iOS

--- a/sass/seedsource.scss
+++ b/sass/seedsource.scss
@@ -8,74 +8,12 @@ $primary: $blue;
 @import '~leaflet-geonames/L.Control.Geonames';
 @import '~leaflet-zoombox/L.Control.ZoomBox';
 
-/* IE fixes */
-@include tablet {
-  .modal-card {
-    margin: 0;
-  }
-}
-
-.modal-card-body {
-  max-height: calc(100vh - 146px);
-}
-/* End IE fixes */
-
-@include tablet {
-  .tabs.is-boxed li.is-active-tablet a {
-    color: $tabs-link-active-color;
-    background-color: $tabs-boxed-link-active-background-color;
-    border-color: $tabs-boxed-link-active-border-color;
-    border-bottom-color: $tabs-boxed-link-active-border-bottom-color !important;
-  }
-}
-
-@include mobile {
-  .tabs.is-boxed li.is-active-mobile a {
-    color: $tabs-link-active-color;
-    background-color: $tabs-boxed-link-active-background-color;
-    border-color: $tabs-boxed-link-active-border-color;
-    border-bottom-color: $tabs-boxed-link-active-border-bottom-color !important;
-  }
-}
-
-@mixin ios-mobile-portrait {
-  @media only screen
-  and (min-device-width: 320px)
-  and (max-device-width: 480px)
-  and (-webkit-min-device-pixel-ratio: 2)
-  and (orientation: portrait) {
-    @content;
-  }
-}
-
-.table th {
-  vertical-align: bottom;
-}
-
-.table td {
-  padding: .5em .5em;
-}
-
-.navbar {
-  z-index: 5;
-}
-
-.navbar-end > .navbar-item:last-child {
-  margin-right: 10px;
-}
-
-@include mobile {
-  .navbar.is-active {
-    position: absolute;
-    height: 100vh;
-    width: 100vw;
-    overflow: auto;
-  }
-}
-
-.tabs:not(:last-child) {
-  margin-bottom: 1em;
-}
+$header-height: 52px;
+$family-strong: "Arial Black", "Arial Bold", Gadget, sans-serif;
+$tab-header-height: 58px;
+$tab-header-height-nopadding: 42px;
+$tab-content-height: calc(100vh - #{$header-height} - #{$tab-header-height});
+$sidebar-width: 440px;
 
 $directions: left top right bottom;
 $spacings: 5 10 15;
@@ -103,33 +41,101 @@ $icons: eye eye-closed crop contrast save load file trash clock chevron-top chev
   }
 }
 
-$header-height: 52px;
-$family-strong: "Arial Black", "Arial Bold", Gadget, sans-serif;
-$tab-header-height: 58px;
-$tab-content-height: calc(100vh - #{$header-height} - #{$tab-header-height});
-$sidebar-width: 440px;
-$ios-footer-height: 80px;
+@each $name, $pair in $colors {
+  $color: nth($pair, 1);
 
-@include mobile {
-  .navbar-menu {
-    max-height: calc(100vh - #{$header-height});
-    overflow: auto;
+  .button.is-#{$name} {
+    background: linear-gradient($color, darken($color, 5%));
+
+    &:hover {
+      background: linear-gradient(darken($color, 5%), darken($color, 7.5%));
+    }
+  }
+}
+
+/* IE fixes */
+@include tablet {
+  .modal-card {
+    margin: 0;
+  }
+}
+
+.modal-card-body {
+  max-height: calc(100vh - 146px);
+}
+/* End IE fixes */
+
+.table th {
+  vertical-align: bottom;
+}
+
+.table td {
+  padding: .5em .5em;
+}
+
+.navbar {
+  position: fixed;
+  width: 100%;
+  z-index: 5;
+}
+
+.navbar-end > .navbar-item:last-child {
+  margin-right: 10px;
+}
+
+.tabs:not(:last-child) {
+  margin-bottom: 1em;
+}
+
+.seedsource-app > .columns {
+  position: absolute;
+  margin-top: $header-height;
+  height: calc(100vh - #{$header-height});
+  width: 100%;
+}
+
+@include touch {
+  .navbar.is-active {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+
+    +.columns {
+      display: none;
+    }
+
+    .navbar-brand {
+      position: fixed;
+      width: 100%;
+    }
+    .navbar-menu {
+      position: fixed;
+      width: 100%;
+      top: $header-height;
+      bottom: 0;
+      overflow: auto;
+    }
   }
 
   .navbar-item:hover, .navbar-link:hover {
     color: $navbar-item-color !important;
     background-color: $navbar-background-color !important;
   }
-}
 
-@include ios-mobile-portrait {
-  .navbar {
-    max-height: calc(100vh - #{$ios-footer-height});
-    overflow: hidden;
-  }
+  .tabs.is-boxed {
+    position: fixed;
+    width: 100%;
+    top: $header-height;
+    background-color: $white;
+    z-index: 6;
 
-  .navbar-menu {
-    max-height: calc(100vh - #{$header-height} - #{$ios-footer-height}) !important;
+    li.is-active-mobile a {
+      color: $tabs-link-active-color;
+      background-color: $tabs-boxed-link-active-background-color;
+      border-color: $tabs-boxed-link-active-border-color;
+      border-bottom-color: $tabs-boxed-link-active-border-bottom-color !important;
+    }
   }
 }
 
@@ -165,17 +171,6 @@ $ios-footer-height: 80px;
   margin-left: 10px;
 }
 
-.seedsource-app {
-  max-height: 100vh;
-  overflow: hidden;
-}
-
-@include ios-mobile-portrait {
-  .seedsource-app {
-    max-height: calc(100vh - #{$ios-footer-height}) !important;
-  }
-}
-
 .sidebar {
   box-shadow: 2px 0px 10px;
   z-index: 2; // Raise box shadow above leaflet map
@@ -202,16 +197,16 @@ $ios-footer-height: 80px;
 
 .sidebar .tab-content {
   position: relative;
-  max-height: $tab-content-height;
-  min-height: $tab-content-height;
+  height: $tab-content-height;
   overflow: auto;
   padding: 0px 15px 0px 15px;
 }
 
-@include ios-mobile-portrait {
+@include mobile {
   .sidebar .tab-content {
-    max-height: calc(100vh - #{$header-height} - #{$tab-header-height} - #{$ios-footer-height}) !important;
-    min-height: calc(100vh - #{$header-height} - #{$tab-header-height} - #{$ios-footer-height}) !important;
+    margin-top: $tab-header-height;
+    height: auto !important;
+    min-height: $tab-content-height;
   }
 }
 
@@ -246,17 +241,10 @@ $ios-footer-height: 80px;
 @include mobile {
   .map {
     position: absolute;
-    top: calc(#{$header-height} + #{$tab-header-height});
+    top: $tab-header-height-nopadding;
+    bottom: 0;
     width: 100%;
-    height: $tab-content-height;
-    overflow: hidden;
     z-index: 0;
-  }
-}
-
-@include ios-mobile-portrait {
-  .map {
-    height: calc(100vh - #{$header-height} - #{$tab-header-height} - #{$ios-footer-height}) !important;
   }
 }
 
@@ -383,7 +371,7 @@ tr.visible .visibility-toggle, .visibility-toggle:hover {
   width: 80px;
 }
 
-.configuration-item .buttons button {
+.configuration-item .buttons .button {
   display: block;
   border: 0px;
   text-align: left;
@@ -392,16 +380,9 @@ tr.visible .visibility-toggle, .visibility-toggle:hover {
   font-size: 14px;
   font-weight: bold;
   width: 80px;
-}
-.configuration-item .buttons button:first-child {
-  background-color: $primary;
-  border-bottom: 1px solid #333;
-  color: $primary-invert;
-}
-
-.configuration-item .buttons button:last-child {
-  background-color: $danger;
-  color: $danger-invert;
+  height: 22.5px;
+  padding: 0px 0px 0px 5px;
+  border-radius: 0;
 }
 
 .map-container {
