--- a/seedsource_core/django/seedsource/templates/seedsource.html
+++ b/seedsource_core/django/seedsource/templates/seedsource.html
@@ -23,6 +23,8 @@
             staticRoot: '{% static "/" %}'
         }
     </script>
+
+    {% include 'snippets/ga.html' with enable_ga=enagle_ga ga_id=ga_id %}
 </head>
 <body>
     <div id="SeedsourceApp"></div>
