--- a/seedsource_core/django/seedsource/templates/seedsource.html
+++ b/seedsource_core/django/seedsource/templates/seedsource.html
@@ -24,7 +24,7 @@
         }
     </script>
 
-    {% include 'snippets/ga.html' with enable_ga=enagle_ga ga_id=ga_id %}
+    {% include 'snippets/ga.html' with enable_ga=enable_ga ga_id=ga_id %}
 </head>
 <body>
     <div id="SeedsourceApp"></div>
