--- a/seedsource_core/django/seedsource/templates/pdf/report.html
+++ b/seedsource_core/django/seedsource/templates/pdf/report.html
@@ -246,11 +246,18 @@
                 </thead>
                 <tbody>
                     {% for constraint in constraints %}
-                        <tr>
-                            <td>{{ constraint.label }}</td>
-                            <td>{{ constraint.value|safe }}</td>
-                            <td>{{ constraint.range|safe }}</td>
-                        </tr>
+                        {% if constraint.label == 'Shapefile' %}
+                            <tr>
+                                <td>{{ constraint.label }}</td>
+                                <td colspan=2>{{ constraint.filename|safe }}</td>
+                            </tr>
+                        {% else %}
+                            <tr>
+                                <td>{{ constraint.label }}</td>
+                                <td>{{ constraint.value|safe }}</td>
+                                <td>{{ constraint.range|safe }}</td>
+                            </tr>
+                        {% endif %}
                     {% endfor %}
                 </tbody>
             </table>
