fix broken images and small proptypes error

--- a/seedsource_core/django/seedsource/templates/seedsource.html
+++ b/seedsource_core/django/seedsource/templates/seedsource.html
@@ -11,8 +11,8 @@
 
     {% render_bundle 'main' 'css' %}
 
-    <link rel="icon" href="{% static "images/favicon-32x32.png" %}" sizes="32x32" />
-    <link rel="icon" href="{% static "images/favicon-16x16.png" %}" sizes="16x16" />
+    <link rel="icon" href="./images/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" href="./images/favicon-16x16.png" sizes="16x16" />
 
     <script type="text/javascript">
         window.SS_CONFIG = {
