update legends, add green boundary layer back, touch up layer tab

--- a/javascript/scss/seedsource.scss
+++ b/javascript/scss/seedsource.scss
@@ -503,3 +503,13 @@ tr.visible .visibility-toggle, .visibility-toggle:hover {
     display: none;
   }
 }
+
+.layers-tab {
+  margin: 0 10px;
+  font-size: 1rem;
+}
+
+.layers-tab .title {
+  margin: 10px 0px;
+  font-size: 1.25rem;
+}
