add checkbox styling

--- a/javascript/scss/seedsource.scss
+++ b/javascript/scss/seedsource.scss
@@ -1,5 +1,6 @@
 @import "variables";
 @import '~bulma/bulma';
+@import '~bulma-checkradio';
 @import '~leaflet/dist/leaflet.css';
 @import '~leaflet-basemaps/L.Control.Basemaps';
 @import '~leaflet-geonames/L.Control.Geonames';
@@ -522,4 +523,8 @@ tr.visible .visibility-toggle, .visibility-toggle:hover {
 
 .report-preview .modal-card-foot {
   justify-content: flex-end;
+}
+
+.layer-list {
+  padding: .5rem 0;
 }
