add root url for mbtileserver

--- a/seedsource_core/django/seedsource/templates/seedsource.html
+++ b/seedsource_core/django/seedsource/templates/seedsource.html
@@ -17,7 +17,8 @@
     <script type="text/javascript">
         window.SS_CONFIG = {
             title: '{{ title|escapejs }}',
-            staticRoot: '{% static "/" %}'
+            staticRoot: '{% static "/" %}',
+            mbtileserverRoot: '{{ mbtileserverRoot }}'
         }
     </script>
 
