Update preview app

--- a/seedsource_core/django/preview/templates/preview_login.html
+++ b/seedsource_core/django/preview/templates/preview_login.html
@@ -77,7 +77,7 @@
             <div id="MessageBoxInner">
                 <h4>Early Access Preview</h4>
                 <p>
-                    This is a preview version of the Seedlot Selection Tool (SST) If you have an early access code,
+                    This is a preview version of the {{ title }}. If you have an early access code,
                     please enter it below. Otherwise, please contact
                     <a href="http://fes.forestry.oregonstate.edu/people?path=people/howe-glenn">Glenn Howe</a> at
                     Oregon State University or use the current version of the tool
