Handle no tile server properly

--- a/seedsource_core/django/seedsource/templates/seedsource.html
+++ b/seedsource_core/django/seedsource/templates/seedsource.html
@@ -18,7 +18,7 @@
         window.SS_CONFIG = {
             title: '{{ title|escapejs }}',
             staticRoot: '{% static "/" %}',
-            mbtileserverRoot: '{{ mbtileserverRoot }}'
+            mbtileserverRoot: '{{ mbtileserverRoot|default:"" }}'
         }
     </script>
 
