--- a/javascript/scss/seedsource.scss
+++ b/javascript/scss/seedsource.scss
@@ -392,6 +392,7 @@ tr.visible .visibility-toggle, .visibility-toggle:hover {
   padding-left: 15px;
   border-top: 1px solid #D8D8D8;
   height: 45px;
+  cursor: pointer;
 }
 
 .configuration-item:first-child {
@@ -434,6 +435,11 @@ tr.visible .visibility-toggle, .visibility-toggle:hover {
   height: 22.5px;
   padding: 0px 0px 0px 5px;
   border-radius: 0;
+  margin: 0;
+
+  &:not(:last-child) {
+    margin: 0;
+  }
 }
 
 .map-container {
