Use application title in reports

--- a/seedsource_core/django/seedsource/templates/pdf/report.html
+++ b/seedsource_core/django/seedsource/templates/pdf/report.html
@@ -118,7 +118,7 @@
     </style>
 </head>
 <body>
-    <h2>Seedlot Selection Tool Report - {{ today|date:"m/d/Y" }}</h2>
+    <h2>{{ title }} - {{ today|date:"m/d/Y" }}</h2>
 
     <table class="map-table">
         <tbody>
